removed google register option

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_API_URL=https://shop-backend-production-9f14.up.railway.app
+# VITE_API_URL=http://localhost:8080
+VITE_API_URL=https://shop-backend-ngmr.onrender.com
+
+VITE_GOOGLE_CLIENT_ID=236661704186-9rmldrl7k66c9f9g2ulrs9cvlr2mv97h.apps.googleusercontent.com
